More content for 12.3 features page

--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -73,5 +73,19 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
  - Fix anonymous function formatting: https://github.com/apache/netbeans/pull/2614
  - Fix formatting in executable script: https://github.com/apache/netbeans/pull/2581
  - Cancel Find Usages action: https://github.com/apache/netbeans/pull/2550
+ 
+== HTML & CSS
+ - CSS Go to Declaration , does not work: https://github.com/apache/netbeans/pull/2616
+ - Unselect added files from CDNJS by default: https://github.com/apache/netbeans/pull/2634
+ - CSS: Prevent UI blocking on undocumented properties: https://github.com/apache/netbeans/pull/2722
+ - Fixed readability of HTML code completion items: https://github.com/apache/netbeans/pull/2719
+ - Fix handling of global values: https://github.com/apache/netbeans/pull/2639
+ - Fix npm logo size: https://github.com/apache/netbeans/pull/2632
 
 == Miscellaneous
+ - FlatLaf from 0.31 to 1.0: https://github.com/apache/netbeans/pull/2693, https://github.com/apache/netbeans/pull/2723 and https://github.com/apache/netbeans/pull/2760
+ - Groovy from 2.5.11 to 2.5.14: https://github.com/apache/netbeans/pull/2644
+ - JAXB from 2.2 to 2.3: https://github.com/apache/netbeans/pull/2586
+ - JGit from 5.5.1 to 5.7.0: https://github.com/apache/netbeans/pull/2580
+ - Metro from 2.3.1 to 2.4.4: https://github.com/apache/netbeans/pull/2526
+ - JUnit from 4.12 to 4.13.1: https://github.com/apache/netbeans/pull/2463/files
