Link to 12.3 Features page

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -41,7 +41,7 @@ Apache NetBeans is released four times a year. For details, see link:https://cwi
 
 Latest version of the IDE, released on March 3, 2021.
 
-link:/download/nb123/nb123.html[Download, role="button success"]
+link:/download/nb123/index.html[Features, role="button"] link:/download/nb123/nb123.html[Download, role="button success"]
 
 == Apache NetBeans 12 LTS (NB 12.0)
 
