Link to 12.3 features page

--- a/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
@@ -33,8 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 12.3 was released March 3, 2021.
-See link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.3[Apache NetBeans 12.3 pull requests] for what's been added to this release.
+Apache NetBeans 12.3 was released March 3, 2021. See link:/download/nb123/index.html[Apache NetBeans 12.3 Features] for a full list of features.
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
