Adding general code cleanup

--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -41,9 +41,9 @@ link:/download/nb123/nb123.html[Download, role="button success"]
 
 The full list of pull requests integrated in the 12.3 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.3[is found here], while the highlights are listed below.
 
-== PHP
+=== PHP
 
-=== PHP 8.0 Support
+==== PHP 8.0 Support
  - Constructor Property Promotion: https://github.com/apache/netbeans/pull/2674
  - Named Arguments: https://github.com/apache/netbeans/pull/2704
  - Attribute Syntax: https://github.com/apache/netbeans/pull/2640
@@ -54,7 +54,7 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
  - Complete PHP 8.0 syntax is supported.
  - Code completion for attributes and named parameters is not implemented yet.
 
-=== Improvements
+==== Improvements
  - Show and change the PHP Version of project properties on the status bar: https://github.com/apache/netbeans/pull/2681
  - Added PSR-4 hints: https://github.com/apache/netbeans/pull/2630
  - Use complete Composer package name: https://github.com/apache/netbeans/pull/2583
@@ -67,14 +67,14 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
  - Improvements for constants in code completion: https://github.com/apache/netbeans/pull/2536 and https://github.com/apache/netbeans/pull/2578
  - Remove consecutive empty lines when formatting PHP code: https://github.com/apache/netbeans/pull/2573
 
-=== Fixes
+==== Fixes
  - Shared settings for PHP code generators: https://github.com/apache/netbeans/pull/2691
  - Fix code completion for traits of use and group use statements: https://github.com/apache/netbeans/pull/2533
  - Fix anonymous function formatting: https://github.com/apache/netbeans/pull/2614
  - Fix formatting in executable script: https://github.com/apache/netbeans/pull/2581
  - Cancel Find Usages action: https://github.com/apache/netbeans/pull/2550
  
-== HTML & CSS
+=== HTML & CSS
  - CSS Go to Declaration , does not work: https://github.com/apache/netbeans/pull/2616
  - Unselect added files from CDNJS by default: https://github.com/apache/netbeans/pull/2634
  - CSS: Prevent UI blocking on undocumented properties: https://github.com/apache/netbeans/pull/2722
@@ -82,10 +82,15 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
  - Fix handling of global values: https://github.com/apache/netbeans/pull/2639
  - Fix npm logo size: https://github.com/apache/netbeans/pull/2632
 
-== Miscellaneous
+=== Library Upgrades
  - FlatLaf from 0.31 to 1.0: https://github.com/apache/netbeans/pull/2693, https://github.com/apache/netbeans/pull/2723 and https://github.com/apache/netbeans/pull/2760
  - Groovy from 2.5.11 to 2.5.14: https://github.com/apache/netbeans/pull/2644
  - JAXB from 2.2 to 2.3: https://github.com/apache/netbeans/pull/2586
  - JGit from 5.5.1 to 5.7.0: https://github.com/apache/netbeans/pull/2580
  - Metro from 2.3.1 to 2.4.4: https://github.com/apache/netbeans/pull/2526
  - JUnit from 4.12 to 4.13.1: https://github.com/apache/netbeans/pull/2463/files
+
+=== General Code Cleanup
+ - Eable use of generics: https://github.com/apache/netbeans/pull/2194
+ - Cleanup imports in the Enterprise Web.Monitor module: https://github.com/apache/netbeans/pull/2608
+ - Clean up Vector raw type warnings: https://github.com/apache/netbeans/pull/2611
