Added notable Gradle related changes to NetBeans 12.3 Feature page

--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -82,6 +82,13 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
  - Fix handling of global values: https://github.com/apache/netbeans/pull/2639
  - Fix npm logo size: https://github.com/apache/netbeans/pull/2632
 
+=== Java Build Systems
+
+==== Gradle Support
+ - Favorite tasks can be added to Gradle Navigator: https://github.com/apache/netbeans/pull/2595
+ - Improved Gradle Sub-Project display on large projects: https://github.com/apache/netbeans/pull/2629
+ - Fix IAE, when using composite Gradle Builds: https://github.com/apache/netbeans/pull/2606
+
 === Library Upgrades
  - FlatLaf from 0.31 to 1.0: https://github.com/apache/netbeans/pull/2693, https://github.com/apache/netbeans/pull/2723 and https://github.com/apache/netbeans/pull/2760
  - Groovy from 2.5.11 to 2.5.14: https://github.com/apache/netbeans/pull/2644
