--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -37,11 +37,16 @@ TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0. Th
 
 link:/download/nb123/nb123.html[Download, role="button success"]
 
-== Highlights
-
 The full list of pull requests integrated in the 12.3 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.3[is found here], while the highlights are listed below.
 
-=== PHP
+== Java
+
+==== Gradle
+ - Favorite tasks can be added to Gradle Navigator: https://github.com/apache/netbeans/pull/2595
+ - Improved Gradle Sub-Project display on large projects: https://github.com/apache/netbeans/pull/2629
+ - Fix IAE, when using composite Gradle Builds: https://github.com/apache/netbeans/pull/2606
+
+== PHP
 
 ==== PHP 8.0 Support
  - Constructor Property Promotion: https://github.com/apache/netbeans/pull/2674
@@ -82,14 +87,7 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
  - Fix handling of global values: https://github.com/apache/netbeans/pull/2639
  - Fix npm logo size: https://github.com/apache/netbeans/pull/2632
 
-=== Java Build Systems
-
-==== Gradle Support
- - Favorite tasks can be added to Gradle Navigator: https://github.com/apache/netbeans/pull/2595
- - Improved Gradle Sub-Project display on large projects: https://github.com/apache/netbeans/pull/2629
- - Fix IAE, when using composite Gradle Builds: https://github.com/apache/netbeans/pull/2606
-
-=== Library Upgrades
+== Library Upgrades
  - FlatLaf from 0.31 to 1.0: https://github.com/apache/netbeans/pull/2693, https://github.com/apache/netbeans/pull/2723 and https://github.com/apache/netbeans/pull/2760
  - Groovy from 2.5.11 to 2.5.14: https://github.com/apache/netbeans/pull/2644
  - JAXB from 2.2 to 2.3: https://github.com/apache/netbeans/pull/2586
@@ -97,7 +95,7 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
  - Metro from 2.3.1 to 2.4.4: https://github.com/apache/netbeans/pull/2526
  - JUnit from 4.12 to 4.13.1: https://github.com/apache/netbeans/pull/2463/files
 
-=== General Code Cleanup
+== General Code Cleanup
  - Eable use of generics: https://github.com/apache/netbeans/pull/2194
  - Cleanup imports in the Enterprise Web.Monitor module: https://github.com/apache/netbeans/pull/2608
  - Cleanup Vector raw type warnings: https://github.com/apache/netbeans/pull/2611
