--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -41,6 +41,20 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
 
 == Java
 
+==== LSP
+ - Actions that introduce code elements are exposed through LSP: https://github.com/apache/netbeans/pull/2647
+ - Code generators are exposed through LSP: https://github.com/apache/netbeans/pull/2587
+ - JavaDoc is shown on mouse hover over identifiers: https://github.com/apache/netbeans/pull/2601
+ - Folding rangers are exposed through LSP: https://github.com/apache/netbeans/pull/2682
+ - LSP Codelens: https://github.com/apache/netbeans/pull/2705
+ - Always do save modified files: https://github.com/apache/netbeans/pull/2730
+ - Showing completions returned by annotation Processors: https://github.com/apache/netbeans/pull/2736
+ - Project problems are resolved in headless environment: https://github.com/apache/netbeans/pull/2652
+ - Restart NBLS when an extension providing some NB cluster is installed/uninstalled: https://github.com/apache/netbeans/pull/2698
+ - Enable full VSNetBeans Maven build test: https://github.com/apache/netbeans/pull/2585
+ - Don't show reload/save dialogs: I didn't find the appropriate PR and it's a too small detail to mention IMHO
+ - Properly stop Maven execution from LSP/DAP: https://github.com/apache/netbeans/pull/2679
+
 ==== Gradle
  - Favorite tasks can be added to Gradle Navigator: https://github.com/apache/netbeans/pull/2595
  - Improved Gradle Sub-Project display on large projects: https://github.com/apache/netbeans/pull/2629
