--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -41,7 +41,10 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
 
 == Java
 
-==== LSP
+==== LSP/VS Code Integration
+
+link:https://marketplace.visualstudio.com/items?itemName=ASF.apache-netbeans-java[Apache NetBeans Language Server] enhancements.
+
  - Actions that introduce code elements are exposed through LSP: https://github.com/apache/netbeans/pull/2647
  - Code generators are exposed through LSP: https://github.com/apache/netbeans/pull/2587
  - JavaDoc is shown on mouse hover over identifiers: https://github.com/apache/netbeans/pull/2601
@@ -62,16 +65,13 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
 
 == PHP
 
+Complete PHP 8.0 syntax is supported, though code completion for attributes and named parameters is not implemented yet.
+
 ==== PHP 8.0 Support
  - Constructor Property Promotion: https://github.com/apache/netbeans/pull/2674
  - Named Arguments: https://github.com/apache/netbeans/pull/2704
  - Attribute Syntax: https://github.com/apache/netbeans/pull/2640
  - Allow trailing comma in closure use lists: https://github.com/apache/netbeans/pull/2692
-
-*NOTE on PHP 8.0 support*
-
- - Complete PHP 8.0 syntax is supported.
- - Code completion for attributes and named parameters is not implemented yet.
 
 ==== Improvements
  - Show and change the PHP Version of project properties on the status bar: https://github.com/apache/netbeans/pull/2681
@@ -100,6 +100,13 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
  - Fixed readability of HTML code completion items: https://github.com/apache/netbeans/pull/2719
  - Fix handling of global values: https://github.com/apache/netbeans/pull/2639
  - Fix npm logo size: https://github.com/apache/netbeans/pull/2632
+ 
+== C++ Lite
+
+Enhancements to the link:http://netbeans.apache.org/download/nb121/index.html[C++ Lite features introduced in 12.1].
+
+ - Completing the CPPLite debugger: threads, variables, watches, tooltips, etc: https://github.com/apache/netbeans/pull/2697
+ - Correct the breakpoint functionality in cpplite debugger: https://github.com/apache/netbeans/pull/2726
 
 == Library Upgrades
  - FlatLaf from 0.31 to 1.0: https://github.com/apache/netbeans/pull/2693, https://github.com/apache/netbeans/pull/2723 and https://github.com/apache/netbeans/pull/2760
