--- a/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
@@ -72,7 +72,7 @@ Apache NetBeans can also be installed as a self-contained link:https://snapcraft
 
 == Deployment Platforms
 
-Apache NetBeans 12.3 runs on JDK LTS releases 8 and 11, as well as on JDK 15 and JDK 16, i.e., the current JDK releases at the time of this NetBeans release.
+Apache NetBeans 12.3 runs on JDK LTS releases 8 and 11, as well as on JDK 15, i.e., the current JDK release at the time of this NetBeans release.
 
 TIP: The current JDKs have an issue on Mac OS Big Sur, that causes freezes on dialogs. That could be fixed by applying the workaround described at link:https://issues.apache.org/jira/browse/NETBEANS-5037?focusedCommentId=17234878&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-17234878[NETBEANS-5037] .
 
