--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -73,7 +73,7 @@ Complete PHP 8.0 syntax is supported, though code completion for attributes and 
  - Attribute Syntax: https://github.com/apache/netbeans/pull/2640
  - Allow trailing comma in closure use lists: https://github.com/apache/netbeans/pull/2692
 
-==== Improvements
+==== Enhancements
  - Show and change the PHP Version of project properties on the status bar: https://github.com/apache/netbeans/pull/2681
  - Added PSR-4 hints: https://github.com/apache/netbeans/pull/2630
  - Use complete Composer package name: https://github.com/apache/netbeans/pull/2583
