--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -117,6 +117,6 @@ Enhancements to the link:http://netbeans.apache.org/download/nb121/index.html[C+
  - JUnit from 4.12 to 4.13.1: https://github.com/apache/netbeans/pull/2463/files
 
 == General Code Cleanup
- - Eable use of generics: https://github.com/apache/netbeans/pull/2194
+ - Enable use of generics: https://github.com/apache/netbeans/pull/2194
  - Cleanup imports in the Enterprise Web.Monitor module: https://github.com/apache/netbeans/pull/2608
  - Cleanup Vector raw type warnings: https://github.com/apache/netbeans/pull/2611
