--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -47,6 +47,7 @@ link:https://marketplace.visualstudio.com/items?itemName=ASF.apache-netbeans-jav
 
  - Actions that introduce code elements are exposed through LSP: https://github.com/apache/netbeans/pull/2647
  - Code generators are exposed through LSP: https://github.com/apache/netbeans/pull/2587
+ - Add LSP-based rename refactoring to the Java LSP Server and the LSP Client: https://github.com/apache/netbeans/pull/2600
  - JavaDoc is shown on mouse hover over identifiers: https://github.com/apache/netbeans/pull/2601
  - Folding rangers are exposed through LSP: https://github.com/apache/netbeans/pull/2682
  - LSP Codelens: https://github.com/apache/netbeans/pull/2705
@@ -57,6 +58,12 @@ link:https://marketplace.visualstudio.com/items?itemName=ASF.apache-netbeans-jav
  - Enable full VSNetBeans Maven build test: https://github.com/apache/netbeans/pull/2585
  - Don't show reload/save dialogs: I didn't find the appropriate PR and it's a too small detail to mention IMHO
  - Properly stop Maven execution from LSP/DAP: https://github.com/apache/netbeans/pull/2679
+
+==== nb-javac
+
+ - Update to (Maven distributed) nbjavac 15.0.0.2: https://github.com/apache/netbeans/pull/2759
+ - Fix an issue where permits is treated as a keyword: https://github.com/apache/netbeans/pull/2759
+ - Test case for nb-javac for JDK 15: https://github.com/apache/netbeans/pull/2562
 
 ==== Gradle
  - Favorite tasks can be added to Gradle Navigator: https://github.com/apache/netbeans/pull/2595
