--- a/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
@@ -65,7 +65,7 @@ NOTE: Using https below is highly recommended.
 ////
 Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
 of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
-The PGP keys used to sign this release are available link:https://archive.apache.org/dist/netbeans/KEYS[here].
+The PGP keys used to sign this release are available link:https://downloads.apache.org/dist/netbeans/KEYS[here].
 
 Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
 
