--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -33,7 +33,7 @@
 
 Welcome to Apache NetBeans 12.0!
 
-TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0, which consolidates the feature releases link:http://netbeans.apache.org/download/nb111/index.html[11.1], link:http://netbeans.apache.org/download/nb112/index.html[11.2], and link:http://netbeans.apache.org/download/nb113/index.html[11.3]. Feature releases have not been tested as heavily as the LTS release, which passes through the link:https://cwiki.apache.org/confluence/display/NETBEANS/Results+from+Apache+NetBeans+IDE+12.0+Community+Acceptance+survey[NetCAT Community Acceptance process] and is for these reasons the annual major release. For details, see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[Apache NetBeans quarterly release cycle].
+TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0, which consolidates the feature releases link:http://netbeans.apache.org/download/nb111/index.html[11.1], link:http://netbeans.apache.org/download/nb112/index.html[11.2], and link:http://netbeans.apache.org/download/nb113/index.html[11.3]. Feature releases have not been tested as heavily as the LTS release, which passes through the link:https://cwiki.apache.org/confluence/display/NETBEANS/Results+from+Apache+NetBeans+IDE+12.0+Community+Acceptance+survey[NetCAT Community Acceptance process]. For details, see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[Apache NetBeans quarterly release cycle].
 
 link:/download/nb120/nb120.html[Download, role="button success"]
 
