--- a/netbeans.apache.org/src/content/download/nb122/nb122.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/nb122.asciidoc
@@ -24,7 +24,7 @@ for important requirements for download pages for Apache projects.
 
 ////
 = Downloading Apache NetBeans 12.2 
-:jbake-type: page-noaside
+:jbake-type: page_noaside
 :jbake-tags: download
 :jbake-status: published
 :keywords: Apache NetBeans 12.2 Download
