--- a/netbeans.apache.org/src/content/download/nb124/nb124.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb124/nb124.asciidoc
@@ -34,3 +34,73 @@ for important requirements for download pages for Apache projects.
 :icons: font
 
 Apache NetBeans 12.4 was released May 19, 2021. See link:/download/nb124/index.html[Apache NetBeans 12.4 Features] for a full list of features.
+
+////
+NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
+NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
+NOTE: It's NOT recommended to link to github.
+////
+Apache NetBeans 12.4 is available for download from your closest Apache mirror.
+
+- Binaries: 
+link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.4/netbeans-12.4-bin.zip[netbeans-12.4-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.4/netbeans-12.4-bin.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.4/netbeans-12.4-bin.zip.asc[PGP ASC])
+
+- Installers:
+ 
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.4/Apache-NetBeans-12.4-bin-windows-x64.exe[Apache-NetBeans-12.4-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans/12.4/Apache-NetBeans-12.4-bin-windows-x64.exe.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.4/Apache-NetBeans-12.4-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.4/Apache-NetBeans-12.4-bin-linux-x64.sh[Apache-NetBeans-12.4-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans/12.4/Apache-NetBeans-12.4-bin-linux-x64.sh.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.4/Apache-NetBeans-12.4-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.4/Apache-NetBeans-12.4-bin-macosx.dmg[Apache-NetBeans-12.4-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans/12.4/Apache-NetBeans-12.4-bin-macosx.dmg.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.4/Apache-NetBeans-12.4-bin-macosx.dmg.asc[PGP ASC])
+
+IMPORTANT: macOS versions prior to 10.14.4 require the link:https://support.apple.com/kb/dl1998?locale=en_US[Swift 5 Runtime] to be installed to launch Apache NetBeans 12.4.
+
+- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.4/netbeans-12.4-source.zip[netbeans-12.4-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.4/netbeans-12.4-source.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.4/netbeans-12.4-source.zip.asc[PGP ASC])
+
+- Javadoc for this release is available at https://bits.netbeans.org/12.4/javadoc
+
+////
+NOTE: Using https below is highly recommended.
+////
+Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
+of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
+The PGP keys used to sign this release are available link:https://downloads.apache.org/netbeans/KEYS[here].
+
+Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
+
+== Deployment Platforms
+
+Apache NetBeans 12.4 runs on JDK LTS releases 8 and 11, as well as on JDK 16, i.e., the current JDK release at the time of this NetBeans release.
+
+TIP: The current JDKs have an issue on macOS Big Sur, that causes freezes on dialogs. That could be fixed by applying the workaround described at link:https://issues.apache.org/jira/browse/NETBEANS-5037?focusedCommentId=17234878&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-17234878[NETBEANS-5037] .
+
+== Building from Source
+
+To build Apache NetBeans 12.4 from source you need:
+
+. A distribution of OpenJDK 8 or 11.
+. Apache Ant 1.10 or greater (https://ant.apache.org).
+
+Once you have everything installed then:
+
+1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.4/netbeans-12.4-source.zip[netbeans-12.4-source.zip]
+in a directory of your liking.
+
+[start=2]
+. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
+Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
+
+== Community Approval
+
+As in any other Apache Project, the Apache NetBeans Community approved this release
+through the following voting processes in our link:/community/mailing-lists.html[mailing lists]:
+
+- link:https://lists.apache.org/thread.html/r683b571d1579cc36e3f3b4f787619129bb94d0d81ae89656085447f6%40%3Cdev.netbeans.apache.org%3E[PMC vote]
+- link:https://lists.apache.org/thread.html/r58929149884f684035ebe53d30c0db5ec7bd44da309f075363fab6df%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
+
+== Earlier Releases
+
+Please visit the link:/download/index.html[Apache NetBeans Download page] for further details.
