--- a/netbeans.apache.org/src/content/download/nb124/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb124/index.asciidoc
@@ -16,27 +16,25 @@
      specific language governing permissions and limitations
      under the License.
 ////
-////
-
-NOTE: 
-See https://www.apache.org/dev/release-download-pages.html 
-for important requirements for download pages for Apache projects.
-
-////
-= Apache NetBeans Releases
-:jbake-type: page
-:jbake-tags: download
+= Apache NetBeans 12.4 Features
+:jbake-type: page_noaside
+:jbake-tags: 12.4 features
 :jbake-status: published
-:keywords: Apache NetBeans releases
+:keywords: Apache NetBeans 12.4 IDE features
 :icons: font
-:description: Apache NetBeans Releases Page
+:description: Apache NetBeans 12.4 features
+:toc: left
+:toc-title: 
+:toclevels: 4
 :syntax: true
 :source-highlighter: pygments
 :experimental:
 :linkattrs:
 
-Apache NetBeans is released four times a year. For details, see link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[full release schedule].
+Welcome to Apache NetBeans 12.4, the fourth feature release of the Apache NetBeans 12 cycle!
 
-== Apache NetBeans 12 feature update 4 (NB 12.4)
+TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0. The 12.4 release has not been tested as heavily as the LTS release and may therefore be less stable. Use 12.4 to use the latest features and to provide feedback for the next LTS release. Go here to download  link:/download/nb120/nb120.html[Apache NetBeans 12.0], the current LTS release.
 
-Latest version of the IDE, released on May 19, 2021.
+link:/download/nb124/nb124.html[Download, role="button success"]
+
+The full list of pull requests integrated in the 12.4 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.4[is found here], while the highlights are listed below.
