--- a/netbeans.apache.org/src/content/download/nb124/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb124/index.asciidoc
@@ -55,7 +55,7 @@ https://github.com/apache/netbeans/pull/2896
 Jakarta EE 9 Project Support: https://github.com/apache/netbeans/pull/2684
 
 === Micronaut
-In the New Project dialog, choose "Java with Maven" and then "Micronaut Project", to get started with Micronaut development in Apache NetBeans 12.4.
+ - In the New Project dialog, choose "Java with Maven" and then "Micronaut Project", to get started with Micronaut development in Apache NetBeans 12.4.
  - New Micronaut project wizard
  - Code completion in Micronaut yaml config files implemented
  - HyperlinkProvider for Micronaut yaml config files implemented
