--- a/netbeans.apache.org/src/content/download/nb124/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb124/index.asciidoc
@@ -66,8 +66,8 @@ https://github.com/apache/netbeans/pull/2812
 Automatically detect & list Payara Platform version in the server registration panel: https://github.com/apache/netbeans/pull/2409
 
 === Maven
-Support for VM/app argument injection to (Maven) run and debug project actions: https://github.com/apache/netbeans/pull/2731
-Avoid NPE when executing some Maven projects: https://github.com/apache/netbeans/pull/2833
+ - Support for VM/app argument injection to (Maven) run and debug project actions: https://github.com/apache/netbeans/pull/2731
+ - Avoid NPE when executing some Maven projects: https://github.com/apache/netbeans/pull/2833
 
 === Gradle
  - Upgrade Gradle Tooling to 7.0: https://github.com/apache/netbeans/pull/2861
