--- a/netbeans.apache.org/src/content/download/nb124/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb124/index.asciidoc
@@ -81,14 +81,16 @@ Automatically detect & list Payara Platform version in the server registration p
  - Update nbbuild freeform project to open without errors: https://github.com/apache/netbeans/pull/2798
  - Improve Java/Jakarta EE with Ant based projects: https://github.com/apache/netbeans/pull/2491
 
-== PHP Enhancements
+== Web Frontend Enhancements
+
+=== PHP Enhancements
  - PHP 8.0 Support: Named Arguments: https://github.com/apache/netbeans/pull/2894
  - Prevent generating abstract methods with PHPDoc return array type: https://github.com/apache/netbeans/pull/2886
  - Improved Fix Uses dialog: https://github.com/apache/netbeans/pull/2755
  - Fixed compatibility with Phing 3: https://github.com/apache/netbeans/pull/2776
  - Show new configuration files for PHP-CS-Fixer 3 in Important files : https://github.com/apache/netbeans/pull/2880
 
-== HTML
+=== HTML
  - Improved code completion for HTML forms: https://github.com/apache/netbeans/pull/2739
 
 == Miscellaneous Enhancements
