--- a/netbeans.apache.org/src/content/download/archive/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/archive/index.asciidoc
@@ -29,6 +29,12 @@
 Older Apache NetBeans releases and pre-Apache NetBeans releases can still be
 downloaded, but are no longer supported.
 
+== Apache NetBeans 12 feature update 3 (NB 12.3)
+
+Apache NetBeans 12.2 was released on March 3, 2021.
+
+link:/download/nb123/index.html[Features, role="button"] link:/download/nb123/nb123.html[Download, role="button success"]
+
 == Apache NetBeans 12 feature update 2 (NB 12.2)
 
 Apache NetBeans 12.2 was released on December 5, 2020.
