--- a/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
+++ b/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
@@ -114,6 +114,6 @@ Receive GitHub notifications whenever someone adds a comment to an issue and whe
 - You can follow us in link:https://www.facebook.com/NetBeans[Facebook] and link:https://twitter.com/netbeans[Twitter].
 - We also have a link:https://www.youtube.com/user/netbeansvideos[YouTube] channel.
 - Meet other users in the unofficial link:https://tinyurl.com/netbeans-slack-signup[NetBeans Slack channel]
-- There is also a NetBeans IRC channel (#netbeans) on link:https://freenode.net/[freenode].
+- There is also a NetBeans IRC channel (#netbeans) on link:https://libera.chat/[Libera].
 - Finally we use link:https://github.com/apache/netbeans[GitHub] as a source repository and link:https://issues.apache.org/jira/projects/NETBEANS/summary[JIRA] for issue reporting.
 
