--- a/netbeans.apache.org/src/content/download/nb125/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb125/index.asciidoc
@@ -34,3 +34,85 @@
 Welcome to Apache NetBeans 12.5!
 
 link:/download/nb125/nb125.html[Download, role="button success"]
+
+== Java Enhancements
+
+=== Java
+- Adding declarative Java hints to the LSP server. Java LSP: https://github.com/apache/netbeans/pull/2905
+- Prefer .class execution over .java if the class already exists: https://github.com/apache/netbeans/pull/3036
+- [NETBEANS-5801] - Add javadoc for JDK 18 early access: https://github.com/apache/netbeans/pull/3008
+- [NETBEANS-5704] when generating --patch-module option, also use the generated source roots. Java: https://github.com/apache/netbeans/pull/2977
+- [NETBEANS-5832] Fixing compilation of static initializer for vanilla indexing.: https://github.com/apache/netbeans/pull/3054
+- [NETBEANS-5661] - Added regular expression window and hint: https://github.com/apache/netbeans/pull/2953
+
+=== Gradle
+- Report progress from Gradle's CreateFromTemplateHandler Gradle LSP bug: https://github.com/apache/netbeans/pull/3044
+- Fixed source+javadoc Gradle download Gradle LSP bug: https://github.com/apache/netbeans/pull/3040
+- Source/javadoc attacher must report download actions as enabled. Gradle Java bug: https://github.com/apache/netbeans/pull/3029
+- Gradle Action Providers can disable an action. API Change Gradle enhancement: https://github.com/apache/netbeans/pull/3004
+- LSP server informs client about unsuccessful launch. Gradle LSP: https://github.com/apache/netbeans/pull/3006
+- Prevent deadlock - Workspace shared IO supports close on input stream. Gradle LSP: https://github.com/apache/netbeans/pull/3019
+- Support for configurations in Gradle Gradle LSP enhancement: https://github.com/apache/netbeans/pull/2969
+- [NETBEANS-5768] Recognize gradle projects with settings.gradle only file: https://github.com/apache/netbeans/pull/3028
+- [NETBEANS-2373] Better than nothing support for Gradle Distribution dirs Gradle: https://github.com/apache/netbeans/pull/2920
+- [NETBEANS-5668] Fix slipping <br/>-s in the Project Problem Dialog Gradle: https://github.com/apache/netbeans/pull/2944
+- [NETBEANS-4252] Added PathFinder to Gradle Build Scripts Node Gradle: https://github.com/apache/netbeans/pull/2933
+
+=== Groovy
+- Optionally disable groovy support in NBJLS Groovy LSP bug performance: https://github.com/apache/netbeans/pull/3042
+- Full ClassNode loads in indexer Groovy bug: https://github.com/apache/netbeans/pull/3034
+- Ability to add breakpoints into Groovy sources.: https://github.com/apache/netbeans/pull/3032
+- LSP: Groovy diagnostic handling. Groovy LSP enhancement: https://github.com/apache/netbeans/pull/3009
+- Groovy Code Completion support available through LSP protocol. Groovy LSP enhancement: https://github.com/apache/netbeans/pull/3001
+- Completion items imported from Java delegate to ElementJavadoc to get the content. Groovy enhancement: https://github.com/apache/netbeans/pull/2984
+
+=== Maven
+- Support for disabling actions in Maven (used by Micronaut) API Change Maven enhancement: https://github.com/apache/netbeans/pull/3016
+- [NETBEANS-5803] Handle Maven projects with https name space. Maven: https://github.com/apache/netbeans/pull/3012
+- NETBEANS-5143 Fixes Maven web app twice deployment issue: https://github.com/apache/netbeans/pull/3005
+
+=== Micronaut
+- Support for Micronaut's automatic restarts (mn:run) for Maven API Change Java Maven enhancement: https://github.com/apache/netbeans/pull/2948
+- LSP: Provide hover information in Micronaut yaml files. LSP: https://github.com/apache/netbeans/pull/2955
+- Micronaut configuration completion and navigation improvements LSP: https://github.com/apache/netbeans/pull/2962
+- Micronaut: Allow for creating project on JDK 16.: https://github.com/apache/netbeans/pull/3058
+
+=== Payara
+
+- Fixes fetching the Payara Server list in private network: https://github.com/apache/netbeans/pull/3018
+
+== PHP Enhancements
+- [NETBEANS-5678] Use the URL of the forked repository of the Skeleton Generator: https://github.com/apache/netbeans/pull/3052
+- [NETBEANS-5719] Unused property hint is shown when the property is used as a constructor argument: https://github.com/apache/netbeans/pull/3065
+- [NETBEANS-5480] Add an option(system property) to disable the feature to fold PHP tags: https://github.com/apache/netbeans/pull/3069
+
+== C/C++ Enhancements
+- Fixing newly created cpplite project, avoiding starting the C/C++ LSP server when the configuration is not readable: https://github.com/apache/netbeans/pull/2877
+- In cpplite project, when reading configuration, an empty string should not be considered a valid configuration: https://github.com/apache/netbeans/pull/2904
+
+== Miscellaneous Enhancements
+
+=== General
+- LSP: Find usages should search also in project dependecies. LSP: https://github.com/apache/netbeans/pull/2950
+- [NETBEANS-5492] change test proxy connection url to apache: https://github.com/apache/netbeans/pull/2830
+- [NETBEANS-5698] Fix tabcontrol painting on MacOS retina displays (Aqua LAF): https://github.com/apache/netbeans/pull/2970
+- [NETBEANS-4953] Fixing handling of WSL-based URIs.: https://github.com/apache/netbeans/pull/2988
+- [NETBEANS-5673] Modernize tab controls in the Windows LAF: https://github.com/apache/netbeans/pull/2967
+- [NETBEANS-5697] Various other LAF/HiDPI improvements on Windows: https://github.com/apache/netbeans/pull/2965
+- [NETBEANS-5726] Fix JCheckboxMenuItem state for 'Show Editor Tooolbar': https://github.com/apache/netbeans/pull/2979
+- [NETBEANS-4150] added a KeyringProvider using libsecret for new versions of Gnome: https://github.com/apache/netbeans/pull/2906
+
+=== VSCode
+- Add Run with configuration into code lenses.: https://github.com/apache/netbeans/pull/2995
+- Completion provider for VS Code's launch.json.: https://github.com/apache/netbeans/pull/3025
+- Debugger attach needs to be initialized.: https://github.com/apache/netbeans/pull/2991
+- New from Template for VSCode.: https://github.com/apache/netbeans/pull/2882
+- Run/Debug single .java files outside of project in VSCode.: https://github.com/apache/netbeans/pull/2938
+- [NETBEANS-5346] Debugger attach in VSCode extension.: https://github.com/apache/netbeans/pull/2978
+
+=== Libraries
+- [NETBEANS-5503] Update JUnit from 4.13.1 to 4.13.2 Upgrade Library: https://github.com/apache/netbeans/pull/2831
+- Upgrading Graal.js to 20.3 LTS version: https://github.com/apache/netbeans/pull/2707
+- [NETBEANS-3439] - Upgrade JavaCC from 3.2 to 7.0.5: https://github.com/apache/netbeans/pull/1662
+- Improving usability of New from Template in VSNetBeans.: https://github.com/apache/netbeans/pull/3010
+- Jakarta EE 9 GlassFish 6 Support: https://github.com/apache/netbeans/pull/2902
