--- a/netbeans.apache.org/src/content/download/nb125/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb125/index.asciidoc
@@ -38,7 +38,7 @@ link:/download/nb125/nb125.html[Download, role="button success"]
 == Java Enhancements
 
 === Java
-- Adding declarative Java hints to the LSP server. Java LSP: https://github.com/apache/netbeans/pull/2905
+- Adding declarative Java hints to the LSP server: https://github.com/apache/netbeans/pull/2905
 - Prefer .class execution over .java if the class already exists: https://github.com/apache/netbeans/pull/3036
 - [NETBEANS-5801] - Add javadoc for JDK 18 early access: https://github.com/apache/netbeans/pull/3008
 - [NETBEANS-5704] when generating --patch-module option, also use the generated source roots. Java: https://github.com/apache/netbeans/pull/2977
@@ -61,7 +61,7 @@ link:/download/nb125/nb125.html[Download, role="button success"]
 === Maven
 - Support for disabling actions in Maven (used by Micronaut) API Change Maven enhancement: https://github.com/apache/netbeans/pull/3016
 - [NETBEANS-5803] Handle Maven projects with https name space. Maven: https://github.com/apache/netbeans/pull/3012
-- NETBEANS-5143 Fixes Maven web app twice deployment issue: https://github.com/apache/netbeans/pull/3005
+- [NETBEANS-5143] Fixes Maven web app twice deployment issue: https://github.com/apache/netbeans/pull/3005
 
 === Micronaut
 - Support for Micronaut's automatic restarts (mn:run) for Maven API Change Java Maven enhancement: https://github.com/apache/netbeans/pull/2948
