--- a/netbeans.apache.org/src/content/download/nb125/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb125/index.asciidoc
@@ -35,6 +35,10 @@ Welcome to Apache NetBeans 12.5!
 
 link:/download/nb125/nb125.html[Download, role="button success"]
 
+Complete list of fixes is below:
+
+https://issues.apache.org/jira/browse/NETBEANS-5959?jql=project%20%3D%20NETBEANS%20AND%20(status%20%3D%20Resolved%20OR%20status%20%3D%20Closed)%20AND%20fixVersion%20%3D%2012.5
+
 == Java Enhancements
 
 === Java
