--- a/netbeans.apache.org/src/content/download/nb125/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb125/index.asciidoc
@@ -35,9 +35,7 @@ Welcome to Apache NetBeans 12.5!
 
 link:/download/nb125/nb125.html[Download, role="button success"]
 
-Complete list of fixes is below:
-
-https://issues.apache.org/jira/browse/NETBEANS-5959?jql=project%20%3D%20NETBEANS%20AND%20(status%20%3D%20Resolved%20OR%20status%20%3D%20Closed)%20AND%20fixVersion%20%3D%2012.5
+The full list of pull requests integrated in the 12.5 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.5[is found here], while the highlights are listed below.
 
 == Java Enhancements
 
