--- a/netbeans.apache.org/src/content/download/nb125/nb125.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb125/nb125.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 12.5 was released September 13, 2021.
+Apache NetBeans 12.5 was released September 13, 2021.  See link:/download/nb125/index.html[Apache NetBeans 12.5 Features] for a full list of features.
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
