--- a/netbeans.apache.org/src/content/download/nb125/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb125/index.asciidoc
@@ -40,12 +40,13 @@ The full list of pull requests integrated in the 12.5 timeframe link:https://git
 == Java Enhancements
 
 === Java
-- Adding declarative Java hints to the LSP server: https://github.com/apache/netbeans/pull/2905
+- Temporarily allow setting of SecurityManager: https://github.com/apache/netbeans/pull/3003
+- [NETBEANS-5661] - Added regular expression window and hint: https://github.com/apache/netbeans/pull/2953
 - Prefer .class execution over .java if the class already exists: https://github.com/apache/netbeans/pull/3036
 - [NETBEANS-5801] - Add javadoc for JDK 18 early access: https://github.com/apache/netbeans/pull/3008
 - [NETBEANS-5704] when generating --patch-module option, also use the generated source roots. Java: https://github.com/apache/netbeans/pull/2977
 - [NETBEANS-5832] Fixing compilation of static initializer for vanilla indexing.: https://github.com/apache/netbeans/pull/3054
-- [NETBEANS-5661] - Added regular expression window and hint: https://github.com/apache/netbeans/pull/2953
+- Adding declarative Java hints to the LSP server: https://github.com/apache/netbeans/pull/2905
 
 === Gradle
 - Report progress from Gradle's CreateFromTemplateHandler Gradle LSP bug: https://github.com/apache/netbeans/pull/3044
