Add 12.0 LTS EOL information and fix up archived releases.

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -37,15 +37,20 @@ for important requirements for download pages for Apache projects.
 
 Apache NetBeans is released four times a year. For details, see link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[full release schedule].
 
-== Apache NetBeans 12 feature update 5 (NB 12.5)
+== Apache NetBeans 12.5
 
 Latest version of the IDE, released on September 13, 2021.
 
 link:/download/nb125/index.html[Features, role="button"] link:/download/nb125/nb125.html[Download, role="button success"]
 
-== Apache NetBeans 12 LTS (NB 12.0)
+== Apache NetBeans 12.0 LTS
 
-Latest LTS version of the IDE, released on June 4, 2020.
+Apache NetBeans 12.0 was released on June 4, 2020.
+
+TIP: Apache NetBeans 12.0 does not support Java 15 or above. The Apache NetBeans
+PMC has decided to no longer provide an LTS version of the IDE. Apache NetBeans
+12.0 will be EOL'd when NetBeans 12.6 is released. We recommend using the latest
+release.
 
 link:/download/nb120/index.html[Features, role="button"] link:/download/nb120/nb120.html[Download, role="button success"]
 
